<resources>
    <string name="app_name">Formulario de Contacto</string>
    <string name="telefono">Teléfono:</string>
    <string name="nombre">Nombre Completo:</string>
    <string name="fecha">Fecha de Nacimiento:</string>
    <string name="email">Email:</string>
    <string name="descripcion">Descripción del Contacto:</string>
    <string name="ptelefono">telefono</string>
    <string name="pnombre">nombre</string>
    <string name ="pfecha">fecha</string>
    <string name="pemail">email</string>
    <string name="pdescripcion">descripcion</string>
    <string name="boton">Siguiente</string>
    <string name="titulo">Confirmar Datos</string>
</resources>