<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text" />

    <TextView
        android:id="@+id/fecha_nacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:visibility="invisible"
        />


    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginLeft="5dp"
        android:inputType="date"
        />



    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/descripcion_contacto"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="top"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/tvboton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton"/>


</LinearLayout>